--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@
 * @copyright (C) 2005 - 2011 FrontAccounting, LLC
 * @license http://www.gnu.org/copyleft/gpl-3.0.html GNU/GPL
 * FrontAccounting is Free Software
+* TESTING UBAH CHANGELOG NDAAAAAAA
 */
 
 1. Changelog
